--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ Many people prefer to travel abroad, but I think we should discover our country 
 	</table>
 	<table>
 		<tr>Mail: </tr>
-		<tr><a href="mailto:example@example.com">rami.a951@gmail.com</a></tr>
+		<tr><a href="mailto:rami.a951@gmail.com">rami.a951@gmail.com</a></tr>
 	</table>
 	<table>
 		<tr>cv:</tr>
