--- a/index.html
+++ b/index.html
@@ -3,7 +3,13 @@
 	<title>RAMI AVRAHAMI</title>
 	<link rel="stylesheet" href="styles.css">
 </head>
+ <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 <body style="color:black;"> 
+<div id="menu">
+	<a class="btn-success" href="index.html">Home</a><a href="contact.html">Contact</a>
+</div >
 <h1>Rami Avrahami</h1>
  Hello, my name is Rami Avrahami
 I am 35 years old, I from Jerusalem, married and the father of two precious children
