--- a/index.html
+++ b/index.html
@@ -1,19 +1,21 @@
 <html>
 <head>
 	<title>RAMI AVRAHAMI</title>
-	<link rel="stylesheet" href="styles.css">
+	
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+<link rel="stylesheet" href="styles.css">
 </head>
- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-<body style="color:black;"> 
+
+<body style="color:black;class=size;"> 
 <div id="menu">
 	<a class="btn-success" href="index.html">Home</a><a class="btn-success" href="contact.html">Contact</a>
 </div >
 <h1>Rami Avrahami</h1>
-Hello, my name is Rami Avrahami I am 35 years old, I from Jerusalem, married and the father of two precious children Currently works at a special ed school called<a href"https://serviced.co.il/schools/%D7%91%D7%99%D7%AA-%D7%A1%D7%A4%D7%A8-%D7%99%D7%95%D7%91%D7%9C%D7%99%D7%9D-5/" target="_blank"> Yuvalem</a>Intended for female students with normal cognitive ability who face emotional and mental difficulties
+Hello, my name is Rami Avrahami I am 35 years old, I from Jerusalem, married and the father of two precious children Currently works at a special ed school called<a href="https://serviced.co.il/schools/%D7%91%D7%99%D7%AA-%D7%A1%D7%A4%D7%A8-%D7%99%D7%95%D7%91%D7%9C%D7%99%D7%9D-5/" target="_blank"> Yuvalem</a>Intended for female students with normal cognitive ability who face emotional and mental difficulties
 	<div>My second job is security work in the biblical settlement of <a href="https://he.wikipedia.org/wiki/%D7%A2%D7%9C%D7%9E%D7%95%D7%9F" target="_blank">Almon</a></div>
-	<img src="imeg/rami.jpg" />
+	<img src="rami.jpg" />
 	<h2>my hobbies are</h2>
 <ui>
 	<li>Sports- My favorite sport is soccer. Play and also watch but I like all types of sports and play a wide variety of sports games.
@@ -23,20 +25,6 @@ Hello, my name is Rami Avrahami I am 35 years old, I from Jerusalem, married and
 	<li>Nature hikes- I like to travel in<a href="https://inature.info/wiki/%D7%A9%D7%9E%D7%95%D7%A8%D7%95%D7%AA_%D7%98%D7%91%D7%A2,_%D7%92%D7%A0%D7%99%D7%9D_%D7%9C%D7%90%D7%95%D7%9E%D7%99%D7%99%D7%9D,_%D7%9E%D7%A1%D7%9C%D7%95%D7%9C%D7%99_%D7%98%D7%99%D7%95%D7%9C%D7%99%D7%9D_%D7%91%D7%90%D7%A8%D7%A5_%D7%95%D7%A2%D7%95%D7%93" target="_blank"> Israel.</a> It is a small country but it has everything. From the landscapes of the Judean desert to the forests of the Galilee
 Many people prefer to travel abroad, but I think we should discover our country first</li><iframe width="480" height="360" src="https://www.youtube.com/embed/rsnBG-Jj6U8" title="10 Best Places to Visit in Israel - Travel Video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 </ui>
-	<h2>contact</h2>
-	<table>
-		<tr>Phone Number: </tr>
-		<tr>054-777-1858</tr>
-	</table>
-	<table>
-		<tr>Mail: </tr>
-		<tr><a href="mailto:rami.a951@gmail.com">rami.a951@gmail.com</a></tr>
-	</table>
-	<table>
-		<tr>cv:</tr>
-		<tr><a href="Rami Avrahami cv.pdf">rami avrahami cv</a></tr>
-	</table>
-
 	
 </body>
 
